[package]
name = "char-ranges"
version = "0.1.1"
edition = "2021"
description = "Iterate chars and their start and end byte positions"
documentation = "https://docs.rs/char-ranges"
keywords = ["text", "char", "range", "no-std"]
categories = ["algorithms", "text-processing", "no-std"]
repository = "https://github.com/vallentin/char-ranges"
license = "MIT"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
